--- a/ros2djs_demo_map.html
+++ b/ros2djs_demo_map.html
@@ -1,166 +1,179 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="utf-8" />
+	<meta charset="utf-8" />
 
-<script type="text/javascript" src="http://static.robotwebtools.org/EaselJS/current/easeljs.min.js"></script>
-<script type="text/javascript" src="http://static.robotwebtools.org/EventEmitter2/current/eventemitter2.min.js"></script>
-<script type="text/javascript" src="http://static.robotwebtools.org/roslibjs/current/roslib.min.js"></script>
-<script type="text/javascript" src="http://static.robotwebtools.org/ros2djs/current/ros2d.min.js"></script>
+	<script type="text/javascript" src="http://static.robotwebtools.org/EaselJS/current/easeljs.min.js"></script>
+	<script type="text/javascript"
+		src="http://static.robotwebtools.org/EventEmitter2/current/eventemitter2.min.js"></script>
+	<script type="text/javascript" src="http://static.robotwebtools.org/roslibjs/current/roslib.min.js"></script>
+	<script type="text/javascript" src="http://static.robotwebtools.org/ros2djs/current/ros2d.min.js"></script>
 
-<script type="text/javascript" type="text/javascript">
-  /**
-   * Setup all visualization elements when the page is loaded.
-   */
-  function init() {
-    // Connect to ROS.
-    var ros = new ROSLIB.Ros({
-      url : 'ws://localhost:9090'
-    });
+	<script type="text/javascript" type="text/javascript">
+		/**
+		 * Setup all visualization elements when the page is loaded.
+		 */
+		function init() {
 
-    // Create the main viewer.
-    var viewer = new ROS2D.Viewer({
-      divID : 'map',
-      width : 600,
-      height : 500
-    });
+			console.log('running init.....');
 
-    // Add zoom to the viewer.
-		var zoomView = new ROS2D.ZoomView({
-			rootObject : viewer.scene
-		});
-		// Add panning to the viewer.
-		var panView = new ROS2D.PanView({
-			rootObject : viewer.scene
-		});
+			// Connect to ROS.
+			var ros = new ROSLIB.Ros({
+				url: 'ws://localhost:9090'
+			});
 
-    // Setup the map client.
-    var gridClient = new ROS2D.OccupancyGridClient({
-      ros : ros,
-      rootObject : viewer.scene
-    });
+			// Create the main viewer.
+			var viewer = new ROS2D.Viewer({
+				divID: 'map',
+				width: 1200,
+				height: 1000
+			});
 
-    // Callback functions when there is mouse interaction with the polygon
-		var clickedPolygon = false;
-		var selectedPointIndex = null;
+			// Add zoom to the viewer.
+			var zoomView = new ROS2D.ZoomView({
+				rootObject: viewer.scene
+			});
+			// Add panning to the viewer.
+			var panView = new ROS2D.PanView({
+				rootObject: viewer.scene
+			});
 
-		var pointCallBack = function(type, event, index) {
-			if (type === 'mousedown') {
-				if (event.nativeEvent.shiftKey === true) {
-					polygon.remPoint(index);
+			// Setup the map client.
+			var gridClient = new ROS2D.OccupancyGridClient({
+				ros: ros,
+				rootObject: viewer.scene
+			});
+
+			// Callback functions when there is mouse interaction with the polygon
+			var clickedPolygon = false;
+			var selectedPointIndex = null;
+
+			var pointCallBack = function (type, event, index) {
+				if (type === 'mousedown') {
+					if (event.nativeEvent.shiftKey === true) {
+						polygon.remPoint(index);
+					}
+					else {
+						selectedPointIndex = index;
+					}
 				}
-				else {
-					selectedPointIndex = index;
+				clickedPolygon = true;
+			};
+
+			var lineCallBack = function (type, event, index) {
+				if (type === 'mousedown') {
+					if (event.nativeEvent.ctrlKey === true) {
+						polygon.splitLine(index);
+					}
 				}
+				clickedPolygon = true;
 			}
-			clickedPolygon = true;
-		};
 
-		var lineCallBack = function(type, event, index) {
-			if (type === 'mousedown') {
-				if (event.nativeEvent.ctrlKey === true) {
-					polygon.splitLine(index);
-				}
+			// Create the polygon
+			var polygon = new ROS2D.PolygonMarker({
+				lineColor: createjs.Graphics.getRGB(100, 100, 255, 1),
+				pointCallBack: pointCallBack,
+				lineCallBack: lineCallBack,
+				pointSize: 0.5,
+				lineSize: 0.5
+			});
+
+			// Hack 
+			// in source code : this.fillColor = options.pointColor || createjs.Graphics.getRGB(0, 255, 0, 0.33);
+			polygon.fillColor = createjs.Graphics.getRGB(100, 100, 255, 0);
+
+			// Add the polygon to the viewer
+			viewer.scene.addChild(polygon);
+
+			// Event listeners for mouse interaction with the stage
+			viewer.scene.mouseMoveOutside = false; // doesn't seem to work
+
+			function registerMouseHandlers() {
+				// Setup mouse event handlers
+				var mouseDown = false;
+				var zoomKey = false;
+				var panKey = false;
+				var startPos = new ROSLIB.Vector3();
+
+				viewer.scene.addEventListener('stagemousedown', function (event) {
+					if (event.nativeEvent.ctrlKey === true) {
+						zoomKey = true;
+						zoomView.startZoom(event.stageX, event.stageY);
+					}
+					else if (event.nativeEvent.shiftKey === true) {
+						panKey = true;
+						panView.startPan(event.stageX, event.stageY);
+					}
+					startPos.x = event.stageX;
+					startPos.y = event.stageY;
+					mouseDown = true;
+				});
+
+				viewer.scene.addEventListener('stagemousemove', function (event) {
+					if (mouseDown === true) {
+						if (zoomKey === true) {
+							var dy = event.stageY - startPos.y;
+							var zoom = 1 + 10 * Math.abs(dy) / viewer.scene.canvas.clientHeight;
+							if (dy < 0)
+								zoom = 1 / zoom;
+							zoomView.zoom(zoom);
+						}
+						else if (panKey === true) {
+							panView.pan(event.stageX, event.stageY);
+						}
+						else {
+							if (selectedPointIndex !== null) {
+								var pos = viewer.scene.globalToRos(event.stageX, event.stageY);
+								polygon.movePoint(selectedPointIndex, pos);
+							}
+						}
+					}
+				});
+
+				viewer.scene.addEventListener('stagemouseup', function (event) {
+					if (mouseDown === true) {
+						if (zoomKey === true) {
+							zoomKey = false;
+						}
+						else if (panKey === true) {
+							panKey = false;
+						}
+						else {
+							// Add point when not clicked on the polygon
+							if (selectedPointIndex !== null) {
+								selectedPointIndex = null;
+							}
+							else if (viewer.scene.mouseInBounds === true && clickedPolygon === false) {
+								var pos = viewer.scene.globalToRos(event.stageX, event.stageY);
+								polygon.addPoint(pos);
+								for (var index = 0; index < polygon.pointContainer.getNumChildren(); index++) {
+									var markerPoints = polygon.pointContainer.getChildAt(index);
+									console.log(markerPoints.x, markerPoints.y);
+									// document.getElementById("points").innerText = markerPoints.x;
+								}
+								console.log('===')
+							}
+							clickedPolygon = false;
+						}
+						mouseDown = false;
+					}
+				});
 			}
-			clickedPolygon = true;
+
+			// Scale the canvas to fit to the map
+			gridClient.on('change', function () {
+				viewer.scaleToDimensions(gridClient.currentGrid.width, gridClient.currentGrid.height);
+				registerMouseHandlers()
+			});
 		}
-
-		// Create the polygon
-		var polygon = new ROS2D.PolygonMarker({
-			lineColor : createjs.Graphics.getRGB(100, 100, 255, 1),
-			pointCallBack : pointCallBack,
-			lineCallBack : lineCallBack,
-      pointSize : 0.5,
-      lineSize : 1
-		});
-
-		// Add the polygon to the viewer
-		viewer.scene.addChild(polygon);
-
-		// Event listeners for mouse interaction with the stage
-		viewer.scene.mouseMoveOutside = false; // doesn't seem to work
-
-		viewer.scene.addEventListener('stagemousemove', function(event) {
-			// Move point when it's dragged
-			if (selectedPointIndex !== null) {
-				var pos = viewer.scene.globalToRos(event.stageX, event.stageY);
-				polygon.movePoint(selectedPointIndex, pos);
-			}
-		});
-
-		viewer.scene.addEventListener('stagemouseup', function(event) {
-			// Add point when not clicked on the polygon
-			if (selectedPointIndex !== null) {
-				selectedPointIndex = null;
-			}
-			else if (viewer.scene.mouseInBounds === true && clickedPolygon === false) {
-				var pos = viewer.scene.globalToRos(event.stageX, event.stageY);
-        document.getElementById("points").innerText = event.stageX;
-				polygon.addPoint(pos);
-			}
-			clickedPolygon = false;
-		});
-
-    // function registerMouseHandlers() {
-		// 	// Setup mouse event handlers
-		// 	var mouseDown = false;
-		// 	var zoomKey = false;
-		// 	var panKey = false;
-		// 	var startPos = new ROSLIB.Vector3();
-		// 	viewer.scene.addEventListener('stagemousedown', function(event) {
-		// 		if (event.nativeEvent.ctrlKey === true) {
-		// 			zoomKey = true;
-		// 			zoomView.startZoom(event.stageX, event.stageY);
-		// 		}
-		// 		else if (event.nativeEvent.shiftKey === true) {
-		// 			panKey = true;
-		// 			panView.startPan(event.stageX, event.stageY);
-		// 		}
-		// 		startPos.x = event.stageX;
-		// 		startPos.y = event.stageY;
-		// 		mouseDown = true;
-		// 	});
-
-		// 	viewer.scene.addEventListener('stagemousemove', function(event) {
-		// 		if (mouseDown === true) {
-		// 			if (zoomKey === true) {
-		// 				var dy = event.stageY - startPos.y;
-		// 				var zoom = 1 + 10*Math.abs(dy) / viewer.scene.canvas.clientHeight;
-		// 				if (dy < 0)
-		// 					zoom = 1 / zoom;
-		// 				zoomView.zoom(zoom);
-		// 			}
-		// 			else if (panKey === true) {
-		// 				panView.pan(event.stageX, event.stageY);
-		// 			}
-		// 		}
-		// 	});
-
-		// 	viewer.scene.addEventListener('stagemouseup', function(event) {
-		// 		if (mouseDown === true) {
-		// 			if (zoomKey === true) {
-		// 				zoomKey = false;
-		// 			}
-		// 			else if (panKey === true) {
-		// 				panKey = false;
-		// 			}
-		// 			mouseDown = false;
-		// 		}
-		// 	});
-		// }
-
-    // Scale the canvas to fit to the map
-    gridClient.on('change', function(){
-      viewer.scaleToDimensions(gridClient.currentGrid.width, gridClient.currentGrid.height);
-      //registerMouseHandlers()
-    });
-  }
-</script>
+	</script>
 </head>
 
 <body onload="init()">
-  <h1>Simple Map Example</h1>
-  <div id="map"></div>
-  <p id="points"></p>
+	<h1>Simple Map Example</h1>
+	<div id="map"></div>
+	<p id="points"></p>
 </body>
+
 </html>
